<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_nav_menu">MainActivityNavMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GeekBrains</string>
    <string name="nav_header_subtitle">support@geekbrains.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Изменить тему</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_favorites">Избранное</string>
    <string name="menu_change_theme">Сменить тему</string>
    <string name="menu_about">О приложении</string>
    <string name="text_developer">Разработчик: Поздеев Алексей</string>
    <string name="text_support">При поддержке Geekbrains</string>
    <string name="text_version">Версия 10.4</string>
    <string name="note_add">Добавление заметки</string>
    <string name="note_title">Заголовок</string>
    <string name="note_about">Описание</string>
    <string name="note_content">Текст заметки</string>
    <string name="save_note">Сохранить</string>
    <string name="note_edit">Редактирование заметки</string>
    <string name="edit_note">Редактировать</string>
    <string name="delete">Удалить</string>
</resources>